# UncOpener

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Implementation.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake
data/: org.uncopener.UncOpener.appdata.xml  org.uncopener.UncOpener.desktop
docs/: icons.md  packaging.md  url-contract.md
packaging/: Dockerfile.linux  package-linux.sh  package-windows.ps1
src/app/: AppIcon.cpp  AppIcon.hpp  CMakeLists.txt  ErrorDialog.cpp  ErrorDialog.hpp  MainWindow.cpp  MainWindow.hpp  SuccessSplash.cpp  SuccessSplash.hpp  main.cpp  resources.qrc
src/core/: CMakeLists.txt  Config.cpp  Config.hpp  PathOpener.cpp  PathOpener.hpp  SchemeRegistry.hpp  SchemeRegistryLinux.cpp  SchemeRegistryWindows.cpp  SecurityPolicy.cpp  SecurityPolicy.hpp  UrlParser.cpp  UrlParser.hpp  placeholder.cpp
tests/: CMakeLists.txt  ConfigTests.cpp  DialogTests.cpp  GuiTestMain.cpp  MainWindowTests.cpp  PathOpenerTests.cpp  PlaceholderTests.cpp  ResourceTests.cpp  SchemeRegistryTests.cpp  SecurityPolicyTests.cpp  TestMain.cpp  UrlContractTests.cpp  test_config.cpp  test_dialogs.cpp  test_main.cpp  test_mainwindow.cpp  test_path_opener.cpp  test_placeholder.cpp  test_resources.cpp  test_scheme_registry.cpp  test_security_policy.cpp  test_url_contract.cpp
tools/: check-all.sh  create-appimage.sh  generate-icons.sh  run-ci-tests.sh
